# RegexLab

./: .coveragerc  .coveragerc-core  .coveragerc-ui  .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  Context.sublime-menu  Default.sublime-commands  Default.sublime-keymap  LICENSE.md  Main.sublime-menu  README.md  RegexLab.py  RegexLab.sublime-settings  messages.json  pyproject.toml  regexlab.py  tox.ini  unittesting.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
data/.regexlab/: README.md  rxl.kst  salt.key
data/portfolios/: README.md  rxl_data.json
docs/assets/logo/: regexlab.ascii.txt
messages/: 1.1.0.txt  install.txt
src/: __init__.py
src/commands/: __init__.py  about_command.py  add_pattern_command.py  delete_pattern_command.py  edit_pattern_command.py  generate_integrity_command.py  load_pattern_command.py  new_portfolio_wizard_command.py  portfolio_manager_command.py  portfolio_manager_command_helper.py  use_selection_command.py
src/core/: __init__.py  constants.py  helpers.py  integrity_manager.py  logger.py  models.py  pattern_engine.py  portfolio_manager.py  settings_manager.py
src/services/: __init__.py  pattern_service.py  portfolio_service.py
src/utils/: __init__.py  panel_injection.py
tests/: __init__.py
tests/ui/: __init__.py  test_load_pattern_command_ui.py
tests/unit/: __init__.py  test_helpers.py  test_helpers_builtin.py  test_helpers_edge_cases.py  test_helpers_shorten_path.py  test_helpers_user_paths.py  test_integrity_manager.py  test_integrity_manager_keystore.py  test_integrity_manager_quick_wins.py  test_load_pattern_command.py  test_logger.py  test_models.py  test_models_cached_property.py  test_new_portfolio_wizard_command.py  test_panel_injection.py  test_pattern_engine.py  test_pattern_service.py  test_portfolio_manager.py  test_portfolio_manager_command.py  test_portfolio_service.py  test_portfolio_service_error_handlers.py  test_portfolio_service_extensions.py  test_settings_manager.py  test_settings_manager_coverage.py
